Add `user.home` config to Jenkinsfile Add explicit dependecies on maven-reapiar pom to avoid conflicts and missing jars on tests
Signed-off-by: Javier Ron <javierron90@gmail.com>